fix: add z-index for popper and make it level 1

--- a/components/Popper/Popper.css
+++ b/components/Popper/Popper.css
@@ -1,4 +1,5 @@
 .ztopia-popper {
+  z-index: $z-index-popper;
   padding: 0;
   line-height: inherit;
   background-color: transparent;
